...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="horizontal">

    <fragment android:name="org.eyeseetea.malariacare.fragments.DashboardUnsentFragment"
              android:id="@+id/dashboard_details_fragment"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" />

</LinearLayout>

