...
    <!--</PreferenceCategory>-->
    <PreferenceCategory
        android:key="@string/pref_visual"
        android:title="@string/app_visual">
        <!--<CheckBoxPreference-->
        <!--android:key="@string/show_num_dems"-->
        <!--android:title="@string/settings_checkbox_show_num_dems"-->
        <!--android:summary="@string/settings_checkbox_description_show_num_dems"-->
        <!--android:defaultValue="false" />-->

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <CheckBoxPreference
...
